@@ -22,13 +22,13 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static com.objectcomputing.checkins.services.role.RoleType.Constants.ADMIN_ROLE;
 import static com.objectcomputing.checkins.services.role.RoleType.Constants.MEMBER_ROLE;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class OpportunitiesControllerTest extends TestContainersSuite implements MemberProfileFixture, OpportunitiesFixture, RoleFixture {
 
@@ -37,7 +37,7 @@ class OpportunitiesControllerTest extends TestContainersSuite implements MemberP
     private HttpClient client;
 
     @Test
-    void testCreateAOpportunities(){
+    void testCreateAOpportunities() {
         MemberProfile memberProfile = createADefaultMemberProfile();
 
         OpportunitiesCreateDTO opportunitiesResponseCreateDTO = new OpportunitiesCreateDTO();
@@ -47,8 +47,8 @@ class OpportunitiesControllerTest extends TestContainersSuite implements MemberP
         opportunitiesResponseCreateDTO.setExpiresOn(LocalDate.now());
         opportunitiesResponseCreateDTO.setPending(Boolean.FALSE);
 
-        final HttpRequest<OpportunitiesCreateDTO> request = HttpRequest.POST("",opportunitiesResponseCreateDTO).basicAuth(memberProfile.getWorkEmail(),ADMIN_ROLE);
-        final HttpResponse<Opportunities> response = client.toBlocking().exchange(request,Opportunities.class);
+        final HttpRequest<OpportunitiesCreateDTO> request = HttpRequest.POST("", opportunitiesResponseCreateDTO).basicAuth(memberProfile.getWorkEmail(), ADMIN_ROLE);
+        final HttpResponse<Opportunities> response = client.toBlocking().exchange(request, Opportunities.class);
 
         Opportunities opportunitiesResponseResponse = response.body();
 
@@ -58,7 +58,7 @@ class OpportunitiesControllerTest extends TestContainersSuite implements MemberP
     }
 
     @Test
-    void testMemberCreateAnOpportunities(){
+    void testMemberCreateAnOpportunities() {
         MemberProfile memberProfile = createADefaultMemberProfile();
 
         OpportunitiesCreateDTO opportunitiesResponseCreateDTO = new OpportunitiesCreateDTO();
@@ -68,7 +68,7 @@ class OpportunitiesControllerTest extends TestContainersSuite implements MemberP
         opportunitiesResponseCreateDTO.setExpiresOn(LocalDate.now());
         opportunitiesResponseCreateDTO.setPending(Boolean.FALSE);
 
-        final HttpRequest<OpportunitiesCreateDTO> request = HttpRequest.POST("",opportunitiesResponseCreateDTO).basicAuth(memberProfile.getWorkEmail(),MEMBER_ROLE);
+        final HttpRequest<OpportunitiesCreateDTO> request = HttpRequest.POST("", opportunitiesResponseCreateDTO).basicAuth(memberProfile.getWorkEmail(), MEMBER_ROLE);
         final HttpResponse<Opportunities> response = client.toBlocking().exchange(request, Opportunities.class);
 
         Opportunities opportunitiesResponseResponse = response.body();
@@ -82,144 +82,126 @@ class OpportunitiesControllerTest extends TestContainersSuite implements MemberP
     void testCreateAnInvalidOpportunities() {
         OpportunitiesCreateDTO opportunitiesResponseCreateDTO = new OpportunitiesCreateDTO();
 
-        final HttpRequest<OpportunitiesCreateDTO> request = HttpRequest.POST("",opportunitiesResponseCreateDTO).basicAuth(ADMIN_ROLE,ADMIN_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class,
-                () -> client.toBlocking().exchange(request, Map.class));
+        final HttpRequest<OpportunitiesCreateDTO> request = HttpRequest.POST("", opportunitiesResponseCreateDTO).basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
+                client.toBlocking().exchange(request, Map.class)
+        );
 
         JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
         JsonNode errors = Objects.requireNonNull(body).get("_embedded").get("errors");
         JsonNode href = Objects.requireNonNull(body).get("_links").get("self").get("href");
         List<String> errorList = List.of(errors.get(0).get("message").asText(), errors.get(1).get("message").asText(),
-                errors.get(2).get("message").asText(), errors.get(3).get("message").asText())
-                .stream().sorted().collect(Collectors.toList());
-        assertEquals(4,errorList.size());
-        assertEquals(request.getPath(),href.asText());
+                        errors.get(2).get("message").asText(), errors.get(3).get("message").asText())
+                .stream().sorted().toList();
+        assertEquals(4, errorList.size());
+        assertEquals(request.getPath(), href.asText());
         assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
     }
 
 
     @Test
     void testCreateANullOpportunities() {
-        final HttpRequest<String> request = HttpRequest.POST("","").basicAuth(ADMIN_ROLE,ADMIN_ROLE);
+        final HttpRequest<String> request = HttpRequest.POST("", "").basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class,
                 () -> client.toBlocking().exchange(request, Map.class));
+
         JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
         JsonNode error = Objects.requireNonNull(body).get("_embedded").get("errors").get(0).get("message");
         JsonNode href = Objects.requireNonNull(body).get("_links").get("self").get("href");
 
-        assertEquals("Required Body [opportunitiesResponse] not specified",error.asText());
-        assertEquals(request.getPath(),href.asText());
-        assertEquals(HttpStatus.BAD_REQUEST,responseException.getStatus());
-
+        assertEquals("Required Body [opportunitiesResponse] not specified", error.asText());
+        assertEquals(request.getPath(), href.asText());
+        assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
     }
 
     @Test
     void testGETFindByValueName() {
-
         MemberProfile memberProfile = createADefaultMemberProfile();
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
 
-
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/?name=%s", opportunitiesResponse.getName())).basicAuth(ADMIN_ROLE,ADMIN_ROLE);
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/?name=%s", opportunitiesResponse.getName())).basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         final HttpResponse<Set<Opportunities>> response = client.toBlocking().exchange(request, Argument.setOf(Opportunities.class));
-        assertEquals(Set.of(opportunitiesResponse), response.body());
-        assertEquals(HttpStatus.OK,response.getStatus());
 
+        assertEquals(Set.of(opportunitiesResponse), response.body());
+        assertEquals(HttpStatus.OK, response.getStatus());
     }
 
     @Test
     void testGetFindBySubmittedBy() {
-
         MemberProfile memberProfile = createADefaultMemberProfile();
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
 
-
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
-
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/?submittedBy=%s", opportunitiesResponse.getSubmittedBy())).basicAuth(ADMIN_ROLE,ADMIN_ROLE);
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/?submittedBy=%s", opportunitiesResponse.getSubmittedBy())).basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         final HttpResponse<Set<Opportunities>> response = client.toBlocking().exchange(request, Argument.setOf(Opportunities.class));
         assertEquals(Set.of(opportunitiesResponse), response.body());
-        assertEquals(HttpStatus.OK,response.getStatus());
-
+        assertEquals(HttpStatus.OK, response.getStatus());
     }
 
     @Test
     void testGetFindByDescription() {
-
         MemberProfile memberProfile = createADefaultMemberProfile();
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
 
-
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
-
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/?description=%s", opportunitiesResponse.getDescription())).basicAuth(ADMIN_ROLE,ADMIN_ROLE);
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/?description=%s", opportunitiesResponse.getDescription())).basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         final HttpResponse<Set<Opportunities>> response = client.toBlocking().exchange(request, Argument.setOf(Opportunities.class));
         assertEquals(Set.of(opportunitiesResponse), response.body());
-        assertEquals(HttpStatus.OK,response.getStatus());
-
+        assertEquals(HttpStatus.OK, response.getStatus());
     }
-
 
     @Test
     void testGetFindByPending() {
-
         MemberProfile memberProfile = createADefaultMemberProfile();
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
 
-
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
-
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/?pending=%s", opportunitiesResponse.getPending())).basicAuth(ADMIN_ROLE,ADMIN_ROLE);
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/?pending=%s", opportunitiesResponse.getPending())).basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         final HttpResponse<Set<Opportunities>> response = client.toBlocking().exchange(request, Argument.setOf(Opportunities.class));
-        assertEquals(Set.of(opportunitiesResponse), response.body());
-        assertEquals(HttpStatus.OK,response.getStatus());
 
+        assertEquals(Set.of(opportunitiesResponse), response.body());
+        assertEquals(HttpStatus.OK, response.getStatus());
     }
 
     @Test
     void testGetFindAll() {
-
         MemberProfile memberProfile = createADefaultMemberProfile();
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
 
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
-
-        final HttpRequest<Object> request = HttpRequest.GET("/").basicAuth(ADMIN_ROLE,ADMIN_ROLE);
-
+        final HttpRequest<Object> request = HttpRequest.GET("/").basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         final HttpResponse<Set<Opportunities>> response = client.toBlocking().exchange(request, Argument.setOf(Opportunities.class));
 
         assertEquals(HttpStatus.OK, response.getStatus());
-        assertNotNull(response.getContentLength());
-        response.equals(opportunitiesResponse);
+        assertTrue(response.getContentLength() > 0, "response.getContentLength() > 0");
+        assertEquals(Set.of(opportunitiesResponse), response.body());
     }
 
     @Test
     void testFindOpportunitiesAllParams(){
         MemberProfile memberProfile = createADefaultMemberProfile();
-
         Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
 
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/?submittedBy=%s", opportunitiesResponse.getSubmittedBy())).basicAuth(ADMIN_ROLE,ADMIN_ROLE);
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/?submittedBy=%s", opportunitiesResponse.getSubmittedBy()))
+                .basicAuth(ADMIN_ROLE,ADMIN_ROLE);
         final HttpResponse<Set<Opportunities>> response = client.toBlocking().exchange(request, Argument.setOf(Opportunities.class));
 
         assertEquals(Set.of(opportunitiesResponse), response.body());
         assertEquals(HttpStatus.OK,response.getStatus());
-
     }
 
     @Test
     void testOpportunitiesDoesNotExist() {
-
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/?submittedBy=%s",UUID.randomUUID())).basicAuth(ADMIN_ROLE,ADMIN_ROLE);
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/?submittedBy=%s", UUID.randomUUID())).basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         HttpResponse<Set<Opportunities>> response = client.toBlocking().exchange(request, Argument.setOf(Opportunities.class));
 
         assertEquals(Set.of(), response.body());
-        assertEquals(HttpStatus.OK,response.getStatus());
-
+        assertEquals(HttpStatus.OK, response.getStatus());
     }
 
     @Test
-    void testUpdateOpportunities(){
+    void testUpdateOpportunities() {
         MemberProfile memberProfile = createADefaultMemberProfile();
         createAndAssignAdminRole(memberProfile);
 
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
 
         final HttpRequest<Opportunities> request = HttpRequest.PUT("", opportunitiesResponse)
                 .basicAuth(memberProfile.getWorkEmail(), ADMIN_ROLE);
@@ -231,11 +213,11 @@ class OpportunitiesControllerTest extends TestContainersSuite implements MemberP
     }
 
     @Test
-    void testUpdateNonExistingOpportunities(){
+    void testUpdateNonExistingOpportunities() {
         MemberProfile memberProfile = createADefaultMemberProfile();
         createAndAssignAdminRole(memberProfile);
 
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
         opportunitiesResponse.setId(UUID.randomUUID());
 
         final HttpRequest<Opportunities> request = HttpRequest.PUT("", opportunitiesResponse)
@@ -253,11 +235,11 @@ class OpportunitiesControllerTest extends TestContainersSuite implements MemberP
     }
 
     @Test
-    void testUpdateNotExistingMemberOpportunities(){
+    void testUpdateNotExistingMemberOpportunities() {
         MemberProfile memberProfile = createADefaultMemberProfile();
         createAndAssignAdminRole(memberProfile);
 
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
         opportunitiesResponse.setSubmittedBy(UUID.randomUUID());
 
         final HttpRequest<Opportunities> request = HttpRequest.PUT("", opportunitiesResponse)
@@ -271,15 +253,14 @@ class OpportunitiesControllerTest extends TestContainersSuite implements MemberP
 
         assertEquals(String.format("Member %s doesn't exist", opportunitiesResponse.getSubmittedBy()), error);
         assertEquals(request.getPath(), href);
-
     }
 
     @Test
-    void testUpdateNotMemberOpportunitiesWithoutId(){
+    void testUpdateNotMemberOpportunitiesWithoutId() {
         MemberProfile memberProfile = createADefaultMemberProfile();
         createAndAssignAdminRole(memberProfile);
 
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
         opportunitiesResponse.setId(null);
 
         final HttpRequest<Opportunities> request = HttpRequest.PUT("", opportunitiesResponse)
@@ -293,12 +274,11 @@ class OpportunitiesControllerTest extends TestContainersSuite implements MemberP
 
         assertEquals(String.format("Unable to find opportunities record with id null", opportunitiesResponse.getId()), error);
         assertEquals(request.getPath(), href);
-
     }
 
     @Test
     void testUpdateUnAuthorized() {
-        Opportunities opportunitiesResponse = new Opportunities("jobOpportunities","opportunities job interests","https://objectcomputing.com/jobs", LocalDate.now(), LocalDate.now(), UUID.randomUUID(), Boolean.TRUE );
+        Opportunities opportunitiesResponse = new Opportunities("jobOpportunities", "opportunities job interests", "https://objectcomputing.com/jobs", LocalDate.now(), LocalDate.now(), UUID.randomUUID(), Boolean.TRUE);
 
         final HttpRequest<Opportunities> request = HttpRequest.PUT("", opportunitiesResponse);
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
@@ -306,36 +286,36 @@ class OpportunitiesControllerTest extends TestContainersSuite implements MemberP
 
         assertEquals(HttpStatus.UNAUTHORIZED, responseException.getStatus());
         assertEquals("Unauthorized", responseException.getMessage());
-
     }
 
     @Test
     void testUpdateANullOpportunities() {
-        final HttpRequest<String> request = HttpRequest.PUT("","").basicAuth(ADMIN_ROLE,ADMIN_ROLE);
+        final HttpRequest<String> request = HttpRequest.PUT("", "")
+                .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class,
                 () -> client.toBlocking().exchange(request, Map.class));
         JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
         JsonNode error = Objects.requireNonNull(body).get("_embedded").get("errors").get(0).get("message");
         JsonNode href = Objects.requireNonNull(body).get("_links").get("self").get("href");
 
-        assertEquals("Required Body [opportunitiesResponse] not specified",error.asText());
-        assertEquals(request.getPath(),href.asText());
-        assertEquals(HttpStatus.BAD_REQUEST,responseException.getStatus());
-
+        assertEquals("Required Body [opportunitiesResponse] not specified", error.asText());
+        assertEquals(request.getPath(), href.asText());
+        assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
     }
 
     @Test
-    void testUpdateInvalidDateOpportunities(){
+    void testUpdateInvalidDateOpportunities() {
         MemberProfile memberProfile = createADefaultMemberProfile();
         createAndAssignAdminRole(memberProfile);
 
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
-        opportunitiesResponse.setSubmittedOn(LocalDate.of(1965,12,11));
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
+        opportunitiesResponse.setSubmittedOn(LocalDate.of(1965, 12, 11));
 
         final HttpRequest<Opportunities> request = HttpRequest.PUT("", opportunitiesResponse)
                 .basicAuth(memberProfile.getWorkEmail(), ADMIN_ROLE);
         final HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
-                client.toBlocking().exchange(request, Map.class));
+                client.toBlocking().exchange(request, Map.class)
+        );
 
         JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
         String error = Objects.requireNonNull(body).get("message").asText();
@@ -343,48 +323,45 @@ class OpportunitiesControllerTest extends TestContainersSuite implements MemberP
 
         assertEquals(String.format("Invalid date for opportunities submission date %s", opportunitiesResponse.getSubmittedBy()), error);
         assertEquals(request.getPath(), href);
-
     }
 
     @Test
-    public void testMemberGETFindByValueName() {
-
+    void testMemberGETFindByValueName() {
         MemberProfile memberProfile = createADefaultMemberProfile();
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
 
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/?name=%s", opportunitiesResponse.getName())).basicAuth(MEMBER_ROLE,MEMBER_ROLE);
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/?name=%s", opportunitiesResponse.getName()))
+                .basicAuth(MEMBER_ROLE, MEMBER_ROLE);
         final HttpResponse<Opportunities> response = client.toBlocking().exchange(request, Opportunities.class);
 
         assertEquals(opportunitiesResponse, response.body());
         assertEquals(HttpStatus.OK, response.getStatus());
-
     }
 
     @Test
-    public void testMemberGetFindBySubmittedBy() {
-
+    void testMemberGetFindBySubmittedBy() {
         MemberProfile memberProfile = createADefaultMemberProfile();
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
 
-
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
-
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/?submittedBy=%s", opportunitiesResponse.getSubmittedBy())).basicAuth(MEMBER_ROLE,MEMBER_ROLE);
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/?submittedBy=%s", opportunitiesResponse.getSubmittedBy()))
+                .basicAuth(MEMBER_ROLE, MEMBER_ROLE);
         final HttpResponse<Opportunities> response = client.toBlocking().exchange(request, Opportunities.class);
 
         assertEquals(opportunitiesResponse, response.body());
         assertEquals(HttpStatus.OK, response.getStatus());
-
     }
 
     @Test
-    void testMemberUpdateOpportunities(){
+    void testMemberUpdateOpportunities() {
         MemberProfile memberProfile = createADefaultMemberProfile();
 
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
 
         final HttpRequest<Opportunities> request = HttpRequest.PUT("", opportunitiesResponse)
                 .basicAuth(MEMBER_ROLE, MEMBER_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.toBlocking().exchange(request, Map.class));
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
+                client.toBlocking().exchange(request, Map.class)
+        );
 
         JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
         String error = Objects.requireNonNull(body).get("message").asText();
@@ -398,10 +375,13 @@ class OpportunitiesControllerTest extends TestContainersSuite implements MemberP
     void testdeleteOpportunitiesByTeamByMember() {
         MemberProfile memberProfile = createADefaultMemberProfile();
 
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
 
-        final HttpRequest<?> request = HttpRequest.DELETE(String.format("/%s", opportunitiesResponse.getId())).basicAuth(MEMBER_ROLE,MEMBER_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.toBlocking().exchange(request, Map.class));
+        final HttpRequest<?> request = HttpRequest.DELETE(String.format("/%s", opportunitiesResponse.getId()))
+                .basicAuth(MEMBER_ROLE, MEMBER_ROLE);
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
+                client.toBlocking().exchange(request, Map.class)
+        );
 
         JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
         String error = Objects.requireNonNull(body).get("message").asText();
@@ -415,16 +395,12 @@ class OpportunitiesControllerTest extends TestContainersSuite implements MemberP
     void testdeleteOpportunitiesIfAdmin() {
         MemberProfile memberProfile = createADefaultMemberProfile();
         createAndAssignAdminRole(memberProfile);
+        Opportunities opportunitiesResponse = createADefaultOpportunities(memberProfile);
 
-        Opportunities opportunitiesResponse  = createADefaultOpportunities(memberProfile);
-
-        final HttpRequest<Object> request = HttpRequest.
-                DELETE(String.format("/%s", opportunitiesResponse.getId())).basicAuth(memberProfile.getWorkEmail(),ADMIN_ROLE);
-
+        final HttpRequest<Object> request = HttpRequest.DELETE(String.format("/%s", opportunitiesResponse.getId()))
+                .basicAuth(memberProfile.getWorkEmail(), ADMIN_ROLE);
         final HttpResponse<Boolean> response = client.toBlocking().exchange(request, Boolean.class);
 
-        assertEquals(HttpStatus.OK,response.getStatus());
-
+        assertEquals(HttpStatus.OK, response.getStatus());
     }
-
 }
